<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_action_user"
        android:title="@string/anasayfa" />

    <item
        android:id="@+id/navigation_statistics"
        android:icon="@drawable/ic_action_bars"
        android:title="@string/statistikler" />

    <item
        android:id="@+id/navigation_group"
        android:icon="@drawable/ic_group"
        android:title="@string/grup" />

    <item
        android:id="@+id/navigation_questions"
        android:icon="@drawable/ic_question_answer"
        android:title="@string/sorucevap" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/ayarlar" />

</menu>
