<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dialogs.ForgetPasswordDialog">


    <TextView
        android:id="@+id/tvForgetPassHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/sifremi_unuttum"
        android:textColor="@color/textColorPrimary"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view30"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/cardview_shadow_start_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgetPassHeader" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edForgetPasswordMail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/ic_action_mail"
        android:ems="10"
        android:hint="@string/mail_adresiniz"
        android:maxLength="50"
        android:textColor="@color/textColorSecondary"
        app:layout_constraintEnd_toEndOf="@+id/view30"
        app:layout_constraintStart_toStartOf="@+id/view30"
        app:layout_constraintTop_toBottomOf="@+id/view30"
        app:met_baseColor="@color/textColorSecondary"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/colorAccent"
        app:met_textColorHint="@color/textColorPrimary" />

    <Button
        android:id="@+id/btnForgetPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_dalgalanma"
        android:text="@string/gonder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edForgetPasswordMail" />
</android.support.constraint.ConstraintLayout>