<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePasswordActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edSifreGuncelleEski"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:drawableStart="@drawable/ic_action_lock_closed"
            android:ems="10"
            android:hint="@string/eski_sifre"
            android:inputType="textPersonName|textPassword"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/textColorSecondary"
            android:maxLength="50"
            app:met_baseColor="@color/textColorSecondary"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorAccent"
            app:met_textColorHint="@color/textColorPrimary"
            />


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edSifreGuncelleYeni"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edSifreGuncelleEski"
            android:drawableStart="@drawable/ic_action_lock_closed"
            android:ems="10"
            android:hint="@string/yeni_sifre"
            android:inputType="textPersonName|textPassword"
            android:textColorHint="@color/colorPrimary"
            android:maxLength="50"
            android:textColor="@color/textColorSecondary"
            app:met_baseColor="@color/textColorSecondary"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorAccent"
            app:met_textColorHint="@color/textColorPrimary"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edSifreGuncelleYeniTekrar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:maxLength="50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edSifreGuncelleYeni"
            android:drawableStart="@drawable/ic_action_lock_closed"
            android:ems="10"
            android:hint="@string/yeni_sifre_tekrar"
            android:inputType="textPersonName|textPassword"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/textColorSecondary"
            app:met_baseColor="@color/textColorSecondary"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorAccent"
            app:met_textColorHint="@color/textColorPrimary"/>

        <Button
            android:id="@+id/btnSifreDegisKaydet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_dalgalanma"
            android:text="@string/kaydet"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edSifreGuncelleYeniTekrar" />

        <ProgressBar
            android:id="@+id/pbSifreDegis"
            style="?android:attr/progressBarStyle"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>


</ScrollView>